--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -1003,8 +1003,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rWDmnhyozN {
-  padding-top: 30px;
-  padding-bottom: 90px;
+  padding-top: 15px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-rWDmnhyozN .list-group-item {
@@ -1055,6 +1055,62 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 550px) {
   .cid-rWDmnhyozN .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-rWE26dmnCo {
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rWE26dmnCo .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-rWE26dmnCo .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-rWE26dmnCo .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-rWE26dmnCo .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-rWE26dmnCo .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-rWE26dmnCo .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-rWE26dmnCo .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rWE26dmnCo .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-rWE26dmnCo .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-rWE26dmnCo .price-figure {
     font-size: 4.25rem;
   }
 }
@@ -2682,7 +2738,7 @@ section.lazy-placeholder:after {
 }
 .cid-rWCtb4KE9X {
   padding-top: 30px;
-  padding-bottom: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rWCtb4KE9X .list-group-item {
@@ -2733,6 +2789,62 @@ section.lazy-placeholder:after {
 }
 @media (max-width: 550px) {
   .cid-rWCtb4KE9X .price-figure {
+    font-size: 4.25rem;
+  }
+}
+.cid-rWE2ywUdw3 {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-rWE2ywUdw3 .list-group-item {
+  padding: .75rem 3.25rem;
+}
+.cid-rWE2ywUdw3 .plan {
+  word-break: break-word;
+  position: relative;
+  max-width: 300px;
+  padding-right: 0;
+  padding-left: 0;
+  color: #767676;
+}
+.cid-rWE2ywUdw3 .plan .list-group-item {
+  position: relative;
+  -webkit-justify-content: center;
+  justify-content: center;
+  background-color: transparent;
+  border: 0;
+}
+.cid-rWE2ywUdw3 .plan .list-group-item::after {
+  position: absolute;
+  bottom: 0;
+  left: 20%;
+  width: 60%;
+  height: 2px;
+  content: "";
+  background-color: #eaeaea;
+}
+.cid-rWE2ywUdw3 .plan .list-group-item:last-child::after {
+  display: none;
+}
+.cid-rWE2ywUdw3 .plan.favorite {
+  background-color: #fff;
+  box-shadow: 0 0 60px 0 rgba(0, 0, 0, 0.07);
+}
+.cid-rWE2ywUdw3 .plan-header {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rWE2ywUdw3 .price-figure {
+  font-weight: 700;
+  color: #232323;
+}
+.cid-rWE2ywUdw3 .price-value {
+  font-weight: 700;
+  vertical-align: top;
+}
+@media (max-width: 550px) {
+  .cid-rWE2ywUdw3 .price-figure {
     font-size: 4.25rem;
   }
 }
@@ -3435,5 +3547,101 @@ section.lazy-placeholder:after {
   color: #767676;
 }
 .cid-rWDlmCBMAV .btn {
+  margin: 0 0 .5rem 0;
+}
+.cid-rWDL0y5b6H {
+  padding-top: 45px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rWDL0y5b6H .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rWDL0y5b6H .mbr-text {
+  color: #767676;
+  text-align: center;
+}
+.cid-rWDL0y5b6H .card {
+  display: flex;
+  position: relative;
+  justify-content: center;
+}
+.cid-rWDL0y5b6H .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-img {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-img .mbr-overlay {
+  background-color: #efefef;
+  display: none;
+  transition: opacity .3s;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-img .mbr-section-btn {
+  display: flex;
+  position: absolute;
+  transition: opacity .3s;
+  width: 100%;
+  margin: auto;
+  left: 0;
+  justify-content: center;
+  align-items: center;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-img img {
+  width: 100%;
+  height: 100%;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-box {
+  background-color: #ffffff;
+  padding: 0 2rem 2rem 2rem;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-box h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  padding-top: 2rem;
+}
+.cid-rWDL0y5b6H .card-wrapper .card-box p {
+  margin-bottom: 0;
+  padding-top: 1.5rem;
+}
+.cid-rWDL0y5b6H .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-rWDL0y5b6H .popup-btn .mbr-overlay {
+  display: block !important;
+  opacity: 0;
+}
+.cid-rWDL0y5b6H .popup-btn .mbr-section-btn {
+  height: 100%;
+  display: flex !important;
+  opacity: 0;
+}
+.cid-rWDL0y5b6H .popup-btn:hover .mbr-overlay {
+  opacity: .5;
+}
+.cid-rWDL0y5b6H .popup-btn:hover .mbr-section-btn {
+  opacity: 1;
+}
+.cid-rWDL0AeHAP {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-rWDL0AeHAP .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-rWDL0AeHAP .btn {
   margin: 0 0 .5rem 0;
 }
