--- a/curso/assets/mobirise/css/mbr-additional.css
+++ b/curso/assets/mobirise/css/mbr-additional.css
@@ -730,18 +730,6 @@ section.lazy-placeholder:after {
     text-align: center;
   }
 }
-.cid-r6cGhRHPLU {
-  background: #ffffff;
-}
-.cid-r6cGhRHPLU .video-block {
-  margin: auto;
-  width: 100% !important;
-}
-@media (max-width: 768px) {
-  .cid-r6cGhRHPLU .video-block {
-    width: 100% !important;
-  }
-}
 .cid-qU8iNJprqJ {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -2929,8 +2917,75 @@ section.lazy-placeholder:after {
 .cid-rUzTOkywfc .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rWI1ebhm5r {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-rWI1ebhm5r .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rWI1ebhm5r h4 {
+  font-weight: 500;
+}
+.cid-rWI1ebhm5r p {
+  color: #232323;
+}
+.cid-rWI1ebhm5r .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rWI1ebhm5r .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rWI1ebhm5r .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rWI1ebhm5r .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rWI1ebhm5r .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rWI1ebhm5r .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rWI1ebhm5r .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWI1ebhm5r .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rWI1ebhm5r .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rWI1ebhm5r .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
 .cid-rO9IfyyLXV {
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
@@ -3095,9 +3150,76 @@ section.lazy-placeholder:after {
 .cid-ri7n7cB8vN .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rWHZdubuGc {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-rWHZdubuGc .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rWHZdubuGc h4 {
+  font-weight: 500;
+}
+.cid-rWHZdubuGc p {
+  color: #232323;
+}
+.cid-rWHZdubuGc .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rWHZdubuGc .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rWHZdubuGc .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rWHZdubuGc .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rWHZdubuGc .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rWHZdubuGc .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rWHZdubuGc .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWHZdubuGc .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rWHZdubuGc .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rWHZdubuGc .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
 .cid-rOagTAlnib {
-  padding-top: 45px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 45px;
   background-color: #efefef;
 }
 .cid-rOagTAlnib .mbr-section-subtitle {
@@ -3357,8 +3479,75 @@ section.lazy-placeholder:after {
 .cid-rVzTvWOMPB .media-container-row .row-copirayt p {
   width: 100%;
 }
+.cid-rWI02lThIu {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-rWI02lThIu .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rWI02lThIu h4 {
+  font-weight: 500;
+}
+.cid-rWI02lThIu p {
+  color: #232323;
+}
+.cid-rWI02lThIu .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rWI02lThIu .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rWI02lThIu .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rWI02lThIu .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rWI02lThIu .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rWI02lThIu .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rWI02lThIu .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWI02lThIu .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rWI02lThIu .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rWI02lThIu .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
 .cid-rWCp3DS1II {
-  padding-top: 45px;
+  padding-top: 0px;
   padding-bottom: 90px;
   background-color: #efefef;
 }
@@ -3453,9 +3642,76 @@ section.lazy-placeholder:after {
 .cid-rWCp3EZNe0 .btn {
   margin: 0 0 .5rem 0;
 }
+.cid-rWI0j0Z0dP {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-rWI0j0Z0dP .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rWI0j0Z0dP h4 {
+  font-weight: 500;
+}
+.cid-rWI0j0Z0dP p {
+  color: #232323;
+}
+.cid-rWI0j0Z0dP .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rWI0j0Z0dP .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rWI0j0Z0dP .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rWI0j0Z0dP .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rWI0j0Z0dP .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rWI0j0Z0dP .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rWI0j0Z0dP .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWI0j0Z0dP .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rWI0j0Z0dP .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rWI0j0Z0dP .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
 .cid-rWDlmBdsN4 {
-  padding-top: 45px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 30px;
   background-color: #efefef;
 }
 .cid-rWDlmBdsN4 .mbr-section-subtitle {
@@ -3549,9 +3805,76 @@ section.lazy-placeholder:after {
 .cid-rWDlmCBMAV .btn {
   margin: 0 0 .5rem 0;
 }
+.cid-rWI0XaUeMk {
+  padding-top: 75px;
+  padding-bottom: 15px;
+  background-color: #efefef;
+}
+.cid-rWI0XaUeMk .mbr-section-btn > * {
+  margin: 0;
+}
+.cid-rWI0XaUeMk h4 {
+  font-weight: 500;
+}
+.cid-rWI0XaUeMk p {
+  color: #232323;
+}
+.cid-rWI0XaUeMk .aside-content {
+  -webkit-flex-basis: 100%;
+  flex-basis: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.cid-rWI0XaUeMk .block-content {
+  display: -webkit-flex;
+  flex-direction: column;
+  -webkit-flex-direction: column;
+  word-break: break-word;
+}
+.cid-rWI0XaUeMk .media {
+  margin: initial;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rWI0XaUeMk .mbr-figure {
+  align-self: flex-start;
+  -webkit-align-self: flex-start;
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+}
+.cid-rWI0XaUeMk .card-img {
+  padding-right: 2rem;
+  width: auto;
+}
+.cid-rWI0XaUeMk .card-img span {
+  font-size: 72px;
+  color: #707070;
+}
+@media (min-width: 992px) {
+  .cid-rWI0XaUeMk .mbr-figure {
+    padding-right: 4rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-rWI0XaUeMk .mbr-figure {
+    padding-right: 0;
+    padding-bottom: 1rem;
+    margin-bottom: 2rem;
+  }
+}
+@media (max-width: 300px) {
+  .cid-rWI0XaUeMk .card-img span {
+    font-size: 40px !important;
+  }
+}
+.cid-rWI0XaUeMk .cost {
+  text-decoration: line-through;
+  color: #767676;
+}
 .cid-rWDL0y5b6H {
-  padding-top: 45px;
-  padding-bottom: 90px;
+  padding-top: 0px;
+  padding-bottom: 45px;
   background-color: #efefef;
 }
 .cid-rWDL0y5b6H .mbr-section-subtitle {
